--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 
 	<!-- CSS
     ================================================== -->
-   <link rel="stylesheet" href="css/default.css"><!-- <link rel="stylesheet" href="/PERSONAL_PORTFOLIO/js/JS_PAGES/css/default.css"> -->
-	<link rel="stylesheet" href="css/layout.css"><!-- <link rel="stylesheet" href="/PERSONAL_PORTFOLIO/js/JS_PAGES/css/layout.css"> -->
-      <link rel="stylesheet" href="css/media-queries.css"><!-- <link rel="stylesheet" href="/PERSONAL_PORTFOLIO/js/JS_PAGES/css/media-queries.css"> -->
-    <link rel="stylesheet" href="css/magnific-popup.css"><!-- <link rel="stylesheet" href="/PERSONAL_PORTFOLIO/js/JS_PAGES/css/magnific-popup.css"> -->
-   <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css"><!--  <link rel="stylesheet" href="/PERSONAL_PORTFOLIO/js/JS_PAGES/css/font-awesome/css/font-awesome.css"> -->
-   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="css/default.css">
+	<link rel="stylesheet" href="css/layout.css">
+      <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+   <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
  
    <!-- Script
