--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- 	<script src="js/modernizr.js"></script>--><script src="js/modernizr.js"></script>
    <!-- Favicons
 	================================================== -->
-<!-- 	<link rel="shortcut icon" href="Untitled.png" > --><link rel="shortcut icon" href="/images/Untitled.png" >
+<link rel="shortcut icon" href="/imgs/Untitled.png" >
 </head>
 
 <body>
@@ -62,9 +62,9 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="https://www.linkedin.com/in/jaya-sayal-73431214b/" target="_blank"><img src="/images/linkedin.png" class="image"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jaya-sayal-73431214b/" target="_blank"><img src="/imgs/linkedin.png" class="image"></i></a></li>
 <!--                <li><a href="CERTIFICATE_fcc.pdf"><i class="fa fa-certificate"></i></a></li>
- -->               <li><a href="https://twitter.com/jaya_sayal" target="_blank"><img src="/images/twitter.png" class="image"></i></a></li>
+ -->               <li><a href="https://twitter.com/jaya_sayal" target="_blank"><img src="/imgs/twitter.png" class="image"></i></a></li>
                <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -93,7 +93,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="/images/pp.jpeg" alt="" />
+            <img class="profile-pic"  src="/imgs/pp.jpeg" alt="" />
 
          </div>
 
@@ -311,7 +311,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="/images/Project_1.jpg">
+                        <img alt="" src="/imgs/Project_1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Food and Spices</h5>
@@ -330,7 +330,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="/images/Project_3.jpg">
+                        <img alt="" src="/imgs/Project_3.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Water Scientist</h5>
@@ -346,7 +346,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="/images/Project_2.jpg">
+                        <img alt="" src="/imgs/Project_2.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>GitHub Revisited</h5>
@@ -362,7 +362,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="/images/Project_4.jpg">
+                        <img alt="" src="/imgs/Project_4.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Information about me</h5>
