--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@
                   <div>
                      <button class="submit">Submit</button>
                      <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
+<!--                         <img alt="" src="images/loader.gif">
+ -->                     </span>
                   </div>
 
 					</fieldset>
