--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="pp.jpeg" alt="" />
+            <img class="profile-pic"  src="pp.jpg" alt="" />
 
          </div>
 
@@ -629,7 +629,7 @@
 
    <!-- Testimonials Section
    ================================================== -->
-   <!-- <section id="testimonials">
+   <section id="testimonials">
 
       <div class="text-container">
 
@@ -648,24 +648,24 @@
                   <ul class="slides">
 
                      <li>
-    -->                     <!-- <blockquote>
+                     <blockquote>
                            <p>Jaya was a reliable and consistent volunteer at the Goodman South Madison Library. She provided technology assistance to folks who needed more help than library staff could provide. Jaya always arrived on time and communicated well with us, which helped provide an excellent customer service experience. 
                            </p>
                            <cite>Matthew G. Lamb(MPL) </cite>
                         </blockquote>
-                     </li> --> <!-- slide ends -->
+                     </li>  <!-- slide ends -->
 
-                     <!-- <li>
+                      <li>
                         <blockquote>
                            <p>During Jaya Sayal's time at Goodman South Madison Public Library, I found her to be an extremely personable individual, always with a friendly greeting and engaged conversation for staff and guests alike. She would be wonderful addition to any workplace.
                            </p>
                            <cite>Ms.Farrah McDaniel(MPL)</cite>
                         </blockquote>
-                     </li> --> <!-- slide ends -->
+                     </li>  <!-- slide ends -->
 
-                  <!-- </ul>
+                   </ul>
 
-               </div> --> <!-- div.flexslider ends -->
+               </div> <!-- div.flexslider ends -->
 
             <!-- </div> --> <!-- div.flex-container ends -->
 
