--- a/index.html
+++ b/index.html
@@ -817,7 +817,8 @@
 
          </div>
 
-         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
+         <div id="go-top">
+            <a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
 
       </div>
 
