--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                               <p>Web Development</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"><a href="https://jayamsm.github.io/GROUP_PROJECT_YWCA/"></i></a></div>
+                        <div class="link-icon"><a href="https://jayamsm.github.io/GROUP_PROJECT_YWCA/"><i class="icon-plus"></i></a></div>
                      </a>
 
                   </div>
