--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@
                   </div>
           		</div> -->  <!-- item end -->
 
-            </div> <!-- portfolio-wrapper end -->
+            <!-- </div> --> <!-- portfolio-wrapper end -->
 
-         </div> <!-- twelve columns end -->
+         <!-- </div> --> <!-- twelve columns end -->
 
 
          <!-- Modal Popup
@@ -590,9 +590,9 @@
 	      </div> --><!-- modal-01 End -->
 
 
-      </div> <!-- row End -->
+      <!-- </div> --> <!-- row End -->
 
-   </section> <!-- Portfolio Section End-->
+   <!-- </section> --> <!-- Portfolio Section End-->
 
 
    <!-- Call-To-Action Section
