--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 					   <h4>Address and Phone</h4>
 					   <p class="address">
 						   Jaya Sayal<br>
-						   Madison, WI, USA<br>
+						   Fort Collins, CO, USA<br>
 						   <span>(605) 736-0380</span>
 					   </p>
 
