--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                      <br><span>&bull;</span><em class="date">September,2022-December,2022
                   </em></p>
                   <p class="info"><span>&#x1F393;</span><em class="date">Responsive Web Design from <a href="CERTIFICATE_fcc.pdf">freeCodeCamp!</a></em></p>
+                  <p class="info"><span>&#x1F393;</span><em class="date">Responsive Web Design from <a href="javascript-algorithms-and-data-structures.pdf">freeCodeCamp!</a></em></p>
                </div>
 
             </div> <!-- item end -->
