--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                   <p class="info">Tech Bootcamp-YWCA,Madison,WI,USA 
                      <br><span>&bull;</span><em class="date">September,2022-December,2022
                   </em></p>
-                  <p class="info"><span>&#x1F393;</span><em class="date">Responsive Web Design from <a href="CERTIFICATE_fcc.pdf">freeCodeCamp!</a></em></p>
-                  <p class="info"><span>&#x1F393;</span><em class="date">Responsive Web Design from <a href="javascript-algorithms-and-data-structures.pdf">freeCodeCamp!</a></em></p>
+                  <p class="info"><span>&#x1F393;</span><em class="date">Responsive Web Design from <a href="CERTIFICATE_fcc.pdf">freeCodeCamp!</a></em>
+                  <p class="info"><span>&#x1F393;</span><em class="date">JavaScript-Algorithms-and-Data-Structures from <a href="javascript-algorithms-and-data-structures.pdf">freeCodeCamp!</a></em></p>
                </div>
 
             </div> <!-- item end -->
