--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="Jaya Sayal_RESUME.pdf" class="button"><i class="fa fa-qrcode"></i>Resume</a>
+                     <a href="Jaya_Sayal_CV.pdf" class="button"><i class="fa fa-qrcode"></i>Resume</a>
                   </p>
                </div>
 
